[workspace]
resolver = "2"
members = [
    "crates/*",
]
default-members = [
    "crates/os",
]

[workspace.package]
authors = [
    "Yuuki Rika <yvvki@duck.com>",
]
edition = "2021"
description = "Hybrid and modular POSIX"
repository = "https://github.com/yvvki/blue-kernel"
license = "MIT OR Apache-2.0"
