[workspace]
resolver = "2"
members = [
    "crates/*",
]
default-members = [
    "crates/os",
]

[workspace.package]
name = "cunnix"
authors = [
    "Yuuki Rika <yvvki@duck.com>",
]
edition = "2021"
description = "Hybrid and modular POSIX"
repository = "https://github.com/yvvki/cunnix"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
log = { version = "0.4", default-features = false }
conquer-once = { version = "0.4", default-features = false }

bootloader = "0.11"
bootloader_api = "0.11"
bootloader-x86_64-common = "0.11"

ovmf-prebuilt = "0.1.0-alpha.1"

[workspace.dependencies.kernel]
package = "cunnix-kernel"
path = "crates/kernel"
artifact = "bin"
target = "x86_64-unknown-none"
