[package]
name = "cunnix-kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
conquer-once.workspace = true

bootloader_api.workspace = true
bootloader-x86_64-common.workspace = true

