[package]
name = "cunnix-os"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[build-dependencies]
bootloader.workspace = true
kernel.workspace = true

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt.workspace = true
