[package]
name = "blue-os"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[build-dependencies.kernel]
package = "blue-kernel"
path = "../kernel"
artifact = "bin"
target = "x86_64-unknown-none"

[build-dependencies]
bootloader = "0.11"
